<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/longhu_maincomsummary_item_name"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textStyle="bold"
        android:text="@string/name"
        />
    <LinearLayout
        android:id="@+id/mainCom_summary_HV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/longhu_maincomsummary_item_close"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/close"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_rate"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/rate"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_gain"
            android:layout_height="match_parent"
            android:layout_width="35dp"
            android:textSize="10sp"
            android:text="@string/gain"
            android:gravity="center|right"
            />

        <TextView
            android:id="@+id/longhu_maincomsummary_item_CurrentShare"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/currentShare"
            android:gravity="center|right"
            />

        <TextView
            android:id="@+id/longhu_maincomsummary_item_netamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/netamount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_buycount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/buycount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_EPS"
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:textSize="10sp"
            android:text="@string/EaringPerShare"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_buyamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/buyamount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_sellamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:text="@string/sellamount"
            android:gravity="center|right"
            />
    </LinearLayout>
</LinearLayout>
