<LinearLayout
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="35dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="45dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/longhu_maincomsummary_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_code"
            android:layout_width="match_parent"
            android:textSize="10sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainCom_summary_HV"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/longhu_maincomsummary_item_close"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            android:gravity="center|right"
            tools:text="@string/close"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_rate"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/rate"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_gain"
            android:layout_height="match_parent"
            android:layout_width="35dp"
            android:textSize="10sp"
            tools:text="@string/gain"
            android:gravity="center|right"
            />

        <TextView
            android:id="@+id/longhu_maincomsummary_item_CurrentShare"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/currentShare"
            android:gravity="center|right"
            />

        <TextView
            android:id="@+id/longhu_maincomsummary_item_netamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/netamount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_buycount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/buycount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_EPS"
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:textSize="10sp"
            android:gravity="center|right"
            tools:text="@string/EaringPerShare"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_buyamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/buyamount"
            android:gravity="center|right"
            />
        <TextView
            android:id="@+id/longhu_maincomsummary_item_sellamount"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:textSize="10sp"
            tools:text="@string/sellamount"
            android:gravity="center|right"
            />
    </LinearLayout>
</LinearLayout>
