<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="50dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/longhu_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/longhu_list_item_code"
            android:layout_width="match_parent"
            android:textSize="10sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/longhu_list_item_close"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/close"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_list_item_rate"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/rate"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_list_item_buy"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/buyamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_list_item_sell"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/sellamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_list_item_net"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/netamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />

    <TextView
        android:id="@+id/longhu_list_item_type"
        android:layout_height="match_parent"
        android:layout_width="60dp"
        android:textSize="10sp"
        android:text="@string/type"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
</LinearLayout>
