<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="25dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="45dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/longhu_detail_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/longhu_detail_item_code"
            android:layout_width="match_parent"
            android:textSize="10sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/longhu_detail_item_Date"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:textSize="10sp"
        android:gravity="center|left"
        android:textStyle="bold"
        android:text="@string/date"
        />
    <TextView
        android:id="@+id/longhu_detail_item_close"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/avgcost"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_detail_item_buy"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/buyamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_detail_item_sell"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/sellamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/longhu_detail_item_net"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/netamount"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <ImageButton
        android:id="@+id/longhu_detail_item_delete"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
