<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:background="@android:color/white"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="60dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hq_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/hq_list_item_code"
            android:layout_width="match_parent"
            android:textSize="10sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/hq_list_item_close"
        android:layout_height="match_parent"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:text="@string/close"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/hq_list_item_rate"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:layout_height="match_parent"
        android:text="@string/rate"
        android:layout_gravity="center"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/hq_list_item_open"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:layout_height="match_parent"
        android:text="@string/open"
        android:layout_gravity="center"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/hq_list_item_high"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:layout_height="match_parent"
        android:text="@string/high"
        android:layout_gravity="center"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <TextView
        android:id="@+id/hq_list_item_low"
        android:layout_width="45dp"
        android:textSize="10sp"
        android:layout_height="match_parent"
        android:text="@string/low"
        android:layout_gravity="center"
        android:gravity="right|center"
        android:paddingRight="1dp"
        />
    <!--<ImageButton-->
        <!--android:id="@+id/hq_list_item_btn_delete"-->
        <!--android:src="@android:drawable/ic_delete"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:scaleType="center"-->
        <!--android:layout_width="20dp"-->
        <!--android:layout_height="20dp" />-->
    <!--<TextView-->
    <!--android:id="@+id/hq_list_item_code"-->
    <!--android:layout_width="35dp"-->
    <!--android:layout_height="match_parent" />-->
</LinearLayout>
</LinearLayout>