<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="20dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/hq_list_item_name"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/name"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/hq_list_item_close"
            android:layout_height="match_parent"
            android:layout_width="45dp"
            android:textStyle="bold"
            android:text="@string/close"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/hq_list_item_rate"
            android:layout_width="45dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/rate"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/hq_list_item_open"
            android:layout_width="45dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/open"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/hq_list_item_high"
            android:layout_width="45dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/high"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/hq_list_item_low"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/low"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <!--<TextView-->
        <!--android:id="@+id/hq_list_item_code"-->
        <!--android:layout_width="35dp"-->
        <!--android:layout_height="match_parent" />-->
    </LinearLayout>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@android:color/black"/>
    <View
        android:layout_alignParentLeft="true"
        android:background="@android:color/black"
        android:layout_width="2dp"
        android:layout_height="match_parent"/>
    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="2dp"/>
</RelativeLayout>